# stencil

./: .env.example  .gitignore  Cargo.toml  README.md
src/: cli.rs  detect.rs  doc_id.rs  lang.rs  learn.rs  lib.rs  main.rs  model.rs  pages.rs  render.rs  review.rs  section.rs
src/censor/: edit.rs  mod.rs  names.rs  patterns.rs  review.rs
src/commands/: accuracy.rs  detect.rs  mod.rs  restore.rs  review.rs  style.rs  train.rs
src/commands/restore/: interactive.rs
src/extract/: docx.rs  mod.rs  txt.rs
src/ml/: accuracy.rs  artifact.rs  logreg.rs  mod.rs  predict.rs  train.rs
src/ml/features/: censor.rs  mod.rs  styling.rs
src/style/: extract.rs  mod.rs  profile.rs  record.rs  resolve.rs  review.rs
tests/: cli.rs  docx_pipeline.rs  ml_pipeline.rs  ml_spike.rs  review_pipeline.rs  styling_spike.rs
