[package]
name = "stencil"
version = "0.1.0"
edition = "2024"
description = "Local-only CLI that detects bracketed template variables (and optionally censors sensitive values) into a Markdown file for Claude Code to read."
license = "MIT"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
docx-rs = "0.4.20"
dotenvy = "0.15.7"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

# Tuned for runtime speed and a small binary on low-end targets.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
